@@ -1,3 +1,15 @@
+2014-06-23  Eric Carlson  <eric.carlson@apple.com>
+
+        [iOS] remove InbandTextTrackPrivateAVFIOS
+        https://bugs.webkit.org/show_bug.cgi?id=134220
+
+        Reviewed by Benjamin Poulain.
+
+        * WebCore.xcodeproj/project.pbxproj: Remove references to InbandTextTrackPrivateAVFIOS.
+
+        * platform/graphics/ios/InbandTextTrackPrivateAVFIOS.h: Removed.
+        * platform/graphics/ios/InbandTextTrackPrivateAVFIOS.mm: Removed.
+
 2014-06-23  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r170323.
